# gears1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: gears.toml  gears_switch_tables.extra.toml
debug_journal/: 2026-07-22-first-recompilation.md  2026-07-22-runtime-bringup.md
docs/: codemap.md  d3d-seam.md  re-frontier.md  xenia-reuse.md
docs/issues/: 0001-1-0f-dereferenced-as-a-pointer-during-ue3-init.md  0002-guest-segfaults-dereferencing-a-value-loaded-fro.md  0003-guest-segfaults-on-a-load-relative-to-r13.md  0004-store-to-a-plausible-guest-address-faults.md  0005-a-watchpoint-on-a-guest-address-never-fires-thou.md  0006-registers-read-at-a-watchpoint-stop-are-wrong.md  0007-xenia-as-a-differential-oracle-on-linux.md  0008-differential-harness-design-comparing-our-runtim.md  0009-ghidra-decompiles-xbox-360-functions-to-a-single.md  0010-startup-hangs-after-worker-threads-start.md  0011-sigsegv-loading-the-ue3-package-core-xxx.md  0012-title-reports-the-gpu-is-hung.md  0013-title-presents-no-frames-only-one-vdswap-per-run.md  0014-render-thread-sigsegv-in-sub-82544148-during-fir.md  0015-d3d-seam-reconnaissance-for-hle-graphics-backend.md  0016-title-stops-calling-vdswap-after-loading.md  0017-guest-heap-never-reused-freed-memory-title-heap.md  0018-sigsegv-in-the-title-s-rtlheap-coalescer-recycle.md  0019-xenos-shader-container-layout-mapped-magic-low-b.md  0020-every-vertex-shader-in-this-title-has-a-zero-vfe.md  0021-shader-binding-at-the-d3d-seam-sub-82222b98-vert.md  0022-the-title-patches-vertex-fetch-instructions-into.md  0023-gpu-constant-files-are-fed-via-type0-register-wr.md  0024-hot-pair-draw-indx-captured-full-screen-quad-geo.md  0025-first-real-guest-draw-renders-headless-hot-pair.md  0026-whole-frame-draw-backend-works-but-only-the-load.md  0027-scene-frame-renders-176-176-draws-but-is-black-c.md  0028-rendered-scene-frame-is-tinted-pink-red-and-spli.md
runtime/: CMakeLists.txt  crt_printf.cpp  gpu_draw.cpp  gpu_draw.h  gpu_draw_xlate.cpp  gpu_draw_xlate.h  gpu_present.cpp  gpu_present.h  guest_filesystem.cpp  guest_filesystem.h  guest_heap.cpp  guest_heap.h  guest_memory.cpp  guest_memory.h  guest_thread.cpp  guest_thread.h  hle_d3d.cpp  hle_d3d.h  implemented_imports.h  import_stub.cpp  import_stub.h  import_variables.cpp  import_variables.h  input.cpp  input.h  kernel_config.cpp  kernel_dispatcher.cpp  kernel_events.cpp  kernel_file.cpp  kernel_memory.cpp  kernel_misc.cpp  kernel_object_api.cpp  kernel_objects.cpp  kernel_objects.h  kernel_rtl.cpp  kernel_spinlock.cpp  kernel_status.h  kernel_sync.cpp  kernel_thread.cpp  kernel_time.cpp  (+13 more)
tests/: CMakeLists.txt  test_runtime_logic.cpp  test_vmx_instructions.cpp
tools/: catalog.py  compare_bound_shaders.py  decode_bc.py  dedupe_recomp.py  find_addr_refs.py  gdf_extract.py  gen_import_stubs.py  heap_replay.cpp  merge_switch_tables.py  ppcdis.py  prepare_overrides.py  re_frontier.py  scan_mmio_stores.py  shader_extract.py
tools/ghidra_scripts/: DecompDump.py  DecompXbox.py  Disasm.py  FindRefs.py  FixNoReturnAt.py  FixSaveRestoreNoReturn.py  PeekBytes.py  RecreateFunction.py  StubSaveRestoreHelpers.py
tools/system_constants/: CMakeLists.txt  main.cpp
tools/xenos_translate/: CMakeLists.txt  main.cpp
tools/xex_probe/: xex_probe.cpp
xenia_gpu/: CMakeLists.txt  xenia_host_shim.cpp
